2011-04-15  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* debian/watch: Update watch control file for uscan.

2011-04-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac,
	TODO: Remove firefox plugin option.
	* NEWS,
	configure.ac: Bump to 1.0

2011-04-13  Kan-Ru Chen  <kanru@kanru.info>

	* src/mainframe.cpp (OnShowHide): Now Alt+M only iconify the main
	window when tray icon is disabled.

2011-04-12  Kan-Ru Chen  <kanru@kanru.info>

	* src/view/telnetcon.cpp (OnNewIncomingMessage): Fix libnotify
	0.7.0 API compatibility.

2011-04-12  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* src/core/site.h: Fix compilation error of CStie. (Fixes issue 26 by
	chingpang)

2011-04-07  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac: Enable silent rules by default.

2011-03-28  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac: Disable dist-gzip, enable silent-rules and
	maintainer mode.

2011-03-20  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* debian/watch: Add debian/watch.

2011-02-28  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* configure.ac,
	po/zh_CN.po,
	po/zh_TW.po,
	src/mainframe.cpp: Update project information.

2011-02-23  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* build/snapshot-deb.sh,
	debian/pcmanx-gtk2.install: Polish test script for deb and remove
	unneeded file.
	* data/Makefile.am,
	data/pcmanx.1: Add man page for pcmanx.
	* debian/control,
	debian/copyright,
	debian/rules: Add Vcs info.
	* pcmanx_gtk2.cpp: There is no need to check sanity of libpcmanx.
	* pcmanx_gtk2.cpp: Prevent from program crash (Fixes issue 28).
	* src/appconfig.cpp,
	src/core/termview.cpp: Change default font family to 'WenQuanYi Micro Hei
	Mono'.

2011-02-14  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* Makefile.am,
	build/make-new-release.sh,
	configure.ac,
	debian/control,
	debian/libpcmanx-core0.install,
	debian/mozilla-plugin-pcmanx.install,